# python-boss-skynet

./: INSTALL  Makefile  README  example-check-participant  example-notify-participant  example-participant  setup.cfg  setup.py
SkyNET/: Control.py  Exo.py  ExoParticipant.py  __init__.py
conf/: skynet.conf  skynet.env
debian/: changelog  control  python-boss-skynet.bash-completion  python-boss-skynet.postinst  python-boss-skynet.preinst  python-boss-skynet.triggers  rules
docs/: Makefile  conf.py  exo.rst  index.rst  intro.rst
docs/_build/html/: .buildinfo  control.html  exo.html  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js  skynet.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/SkyNET/: Control.html  Exo.html
docs/_build/html/_sources/: control.txt  skynet.txt
examples/: example-check-participant  example-notify-participant  minimal-participant
rpm/: boss-python-skynet.spec  python-boss-skynet.spec  python3-boss-skynet.spec
scripts/: skynet  skynet3  skynet3_exo  skynet_exo
