[metadata]
name = boss-skynet
version = file:VERSION
description = SkyNET for BOSS
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/MeeGoIntegration/python-boss-skynet
author = David Greaves
author_email = david.greaves@jolla.com
license = GPLv2
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GPLv2 License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
project_urls =
    Documentation = https://
    Source = https://
    Tracker = https://

[options]
packages = find:
install_requires = RuoteAMQP
scripts = scripts/skynet
	  scripts/skynet_exo
# data_files = [('/usr/share/doc/python3-boss-skynet',
#              ['examples/example-check-participant',
#               'examples/example-notify-participant',
#               'examples/minimal-participant',
#               'README', 'INSTALL']),
#             ('/etc/skynet', ['conf/skynet.conf', 'conf/skynet.env'])
#             ])

[build_sphinx]
source-dir  =  docs/
build-dir  =  docs/_build
all_files  =  1
